G1 does not uncommit within the heap after JDK-8038423

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 8u40, 9
    • Component/s: hotspot
    • gc
    • b30
    • Verified

        In JDK-8038423 shrinking of the heap within the heap has been implemented. Due to an oversight when splitting the code into JDK-8038423 and JDK-8054818 the policy to only allow shrinking at the end of the heap has been left in.

        Fix this.

              Assignee:
              Thomas Schatzl
              Reporter:
              Thomas Schatzl
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved:

                  Estimated:
                  Original Estimate - 1 day
                  1d
                  Remaining:
                  Remaining Estimate - 1 day
                  1d
                  Logged:
                  Time Spent - Not Specified
                  Not Specified