8056043: Heap does not shrink within the heap after JDK-8038423

Enable shrinking within the heap by removing some code added for JDK-8054818. Enable the test case that checks that again too.

Reviewed-by: jwilhelm, jmasa